--- a/views/admin/board/board-form.ejs
+++ b/views/admin/board/board-form.ejs
@@ -3,7 +3,7 @@
 <section class="board-wrapper view-wrapper wrapper">
   <%- include('./inc-select.ejs') %>
   <div class="tbl-wrap">
-    <%- include(`../../board/form-${boardType}.ejs`) %>
+    <%- include(`../../board/${boardType}-form.ejs`) %>
   </div>
 </section>
 <%- include('../../inc/foot.ejs') %>
