--- a/views/admin/board/board-list.ejs
+++ b/views/admin/board/board-list.ejs
@@ -3,7 +3,7 @@
 <section class="board-wrapper list-wrapper wrapper">
   <%- include('./inc-select.ejs') %>
   <div class="tbl-wrap">
-    <%- include(`../../board/list-${boardType}.ejs`) %>
+    <%- include(`../../board/${boardType}-list.ejs`) %>
   </div>
 </section>
 <%- include('../../inc/foot.ejs') %>
