--- a/views/admin/board/board-view.ejs
+++ b/views/admin/board/board-view.ejs
@@ -3,6 +3,7 @@
 <section class="board-wrapper view-wrapper wrapper">
   <%- include('./inc-select.ejs') %>
   <div class="tbl-wrap">
-    <%- include(`../../board/view-${boardType}.ejs`) %>
+    <%- include(`../../board/${boardType}-view.ejs`) %>
   </div>
-  <%- include('../../inc/foot.ejs') %>
+</section>
+<%- include('../../inc/foot.ejs') %>
