--- a/views/admin/board/inc-select.ejs
+++ b/views/admin/board/inc-select.ejs
@@ -1,16 +1,19 @@
 <div class="form-inline mb-2">
   <select name="tblId" class="form-control" onchange="goLocation(this);">
     <option value="">선택하세요</option>
-    <option value="/<%= currents[0] %>/board?boardType=default">공지사항</option>
-    <option value="/<%= currents[0] %>/board?boardType=gallery">사용 후기 갤러리</option>
-    <option value="/<%= currents[0] %>/board?boardType=gallery">메인페이지 배너</option>
+    <% for(let v of boardLists){ %>
+    <option value="/<%= currents[0] %>/<%= currents[1] %>?boardId=<%= v.id%>"
+      <%= (v.id == boardId) ? 'selected' : '' %>><%= v.title %> </option>
+    <% } %>
+
   </select>
 </div>
 <script>
   function goLocation(el) {
-    location.href = $(el).val();
+    if ($(el).val() !== '') location.href = $(el).val();
   }
 </script>
+
 
 <!--들어오는 값의 option의 value()이 바뀌면
 해당되는 링크로 보내주세요  -->
