--- a/views/board/default-form.ejs
+++ b/views/board/default-form.ejs
@@ -1,8 +1,6 @@
-<link rel="stylesheet" href="/css/board-default.css">
+<link rel="stylesheet" href="/css/<%= currents[1] %>-<%= boardType %>.css">
 <article class="board-container default-type view-page">
-  <form action="/<%= currents[0] %>/board" method="post" enctype="multipart/form-data">
-    <input type="hidden" name="id" value="1">
-    <input type="hidden" name="_method" value="PUT">
+  <form action="/<%= currents[0] %>/<%= currents[1] %>" method="post" enctype="multipart/form-data" name="defaultForm">
     <table class="table border-bottom">
       <tbody>
         <tr>
@@ -23,6 +21,7 @@
               style="min-height: 200px;"></textarea>
           </td>
         </tr>
+        <% if(useImg) { %>
         <tr>
           <td>이미지 첨부</td>
           <td>
@@ -31,20 +30,26 @@
             <% } %>
           </td>
         </tr>
+        <% } %>
+        <% if(useFile) { %>
         <tr>
           <td>파일 첨부</td>
           <td>
-            <% for(let i=1; i<=10; i++) { %>
+            <% for(let i=1; i<=2; i++) { %>
             <input type="file" name="pds" class="form-control-file mb-2">
             <% } %>
           </td>
         </tr>
+        <% } %>
       </tbody>
     </table>
     <div class="text-center my-4">
-      <a href="/<%= currents[0] %>/board?boardType=<%=boardType%>" class="btn btn-primary">리스트</a>
-      <button class="btn btn-success float-right mx-1">수정</button>
+      <a href="/<%= currents[0] %>/<%= currents[1] %>?boardType=<%=boardType%>" class="btn btn-primary">리스트</a>
+      <button class="btn btn-success float-right mx-1">저장</button>
       <button type="reset" class="btn btn-danger float-right mx-1">다시작성</button>
     </div>
   </form>
 </article>
+<script src="/js/<%= currents[1] %>/<%= boardType %>-form.js"></script>
+<!--  *<input type="hidden" name="id" value="1"> ...
+:1번 글을 수정하세요라는 의미 -->
