--- a/views/board/default-list.ejs
+++ b/views/board/default-list.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/board.css">
+<link rel="stylesheet" href="/css/<%= currents[1] %>-<%= boardType %>.css">
 <article class="board-container default-type list-page">
   <table class="table text-center border-bottom">
     <thead class="list-default thead-dark ">
