--- a/views/admin/user/user-form.ejs
+++ b/views/admin/user/user-form.ejs
@@ -4,137 +4,93 @@
 <script src="/js/axios.min.js"></script>
 <script src="/js/validator.min.js"></script>
 <section class="user-wrapper update-wrapper wrapper">
-  <% if(type !== 'create') { %>
-  <form name="userForm" method="POST" action="/<%= currents[0] %>/user" onsubmit="return onSubmitUserForm(this);">
-    <input type="hidden" name="_method" value="PUT">
-    <input type="hidden" name="id" value="<%= user.id %>">
-    <% } else { %>
-    <form name="userForm" method="POST" action="/<%= currents[0] %>/user">
-      <% } %>
-      <table class="user-tbl table">
-        <tbody>
-          <tr>
-            <td class="title require">아이디</td>
-            <td class="content">
-              <% if(type === 'create') { %>
-              <input type="text" name="userid" class="form-control" placeholder="아이디" style="width: 200px;">
-              <div class="valid userid"></div>
-              <% } else { %>
-              <b> <%= user.userid %> </b>
+  <form name="userForm" method="POST" action="/<%= currents[0] %>/user">
+    <table class="user-tbl table">
+      <tbody>
+        <tr>
+          <td class="title require">아이디</td>
+          <td class="content">
+            <input type="text" name="userid" class="form-control" placeholder="아이디" style="width: 200px;">
+            <div class="valid userid"></div>
+          </td>
+        </tr>
+        <tr>
+          <td class="title require">이름</td>
+          <td class="content">
+            <input type="text" name="username" class="form-control" placeholder="이름(필수사항)" style="max-width: 200px;">
+            <div class="valid username"></div>
+          </td>
+        </tr>
+        <tr>
+          <td class="title require">패스워드</td>
+          <td class="content">
+            <input type="password" name="userpw" class="form-control" placeholder="비밀번호" style="max-width: 200px;">
+            <div class="valid userpw"></div>
+          </td>
+        </tr>
+        <tr>
+          <td class="title require">패스워드 확인</td>
+          <td class="content">
+            <input type="password" name="userpw_re" class="form-control" placeholder="비밀번호확인" style="max-width: 200px;">
+            <div class="valid userpw_re"></div>
+          </td>
+        </tr>
+        <tr>
+          <td class="title require">이메일</td>
+          <td class="content">
+            <input type="text" name="email" class="form-control">
+            <div class=" valid email"></div>
+          </td>
+        </tr>
+        <tr>
+          <td class="title">전화번호</td>
+          <td class="content form-inline">
+            <select name="tel1" class="form-control" style="max-width: 100px;">
+              <option value="">선택</option>
+              <% for(let v of telNumber) { %>
+              <option value="<%=v%>"><%=v%></option>
               <% } %>
-            </td>
-          </tr>
-          <tr>
-            <td class="title require">이름</td>
-            <td class="content">
-              <input type="text" name="username" class="form-control" placeholder="이름(필수사항)" style="max-width: 200px;"
-                value=" <%= user.username %>  ">
-              <div class="valid username"></div>
-            </td>
-          </tr>
-          <tr>
-            <% if(type === 'create')  { %>
-            <td class="title require">패스워드</td>
-            <td class="content">
-              <input type="password" name="userpw" class="form-control" placeholder="비밀번호" style="max-width: 200px;">
-              <div class="valid userpw"></div>
-            </td>
-          </tr>
-          <tr>
-            <td class="title require">패스워드 확인</td>
-            <td class="content">
-              <input type="password" name="userpw_re" class="form-control" placeholder="비밀번호확인"
-                style="max-width: 200px;">
-              <div class="valid userpw_re"></div>
-            </td>
-            <% } %>
-          </tr>
-          <tr>
-            <td class="title require">이메일</td>
-            <td class="content">
-              <input type="text" name="email" class="form-control" value=" <%= user.email %>">
-              <div class=" valid email"></div>
-            </td>
-          </tr>
-          <tr>
-            <td class="title">전화번호</td>
-            <td class="content form-inline">
-              <select name="tel1" class="form-control" style="max-width: 100px;">
-                <option value="">선택</option>
-                <% for(let v of telNumber) { %>
-                <% if(type !== 'create') { %>
-                <option value="<%=v%>" <%= (v === user.tel[0] ? 'selected' :'')%>><%=v%></option>
-                <% } else { %>
-                <option value="<%=v%>"><%=v%></option>
-                <% } %>
-                <% } %>
-              </select>
-              <span class="px-2">-</span>
-              <input type="text" name="tel2" class="form-control" style="max-width: 80px;" min="3" maxlength="4"
-                value=" <%= user.tel[1] %>">
-              <span class=" px-2">-</span>
-              <input type="text" name="tel3" class="form-control" style="max-width: 80px;" min="4" maxlength="4"
-                value=" <%= user.tel[2] %>">
-            </td>
-          </tr>
-          <tr>
-            <td class=" title" rowspan="2">주소</td>
-            <td class="content form-inline">
-              <input type="text" name="addrPost" class="form-control mr-2" readonly style="max-width: 120px;"
-                placeholder="우편번호" value=" <%= user.addrPost %>">
-              <a class=" btn btn-primary" id="btPostcode">우편번호찾기</a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="d-flex">
-                <input type="text" name="addrRoad" class="form-control mb-2 flex-glow-1 mr-2" readonly
-                  placeholder="도로명주소" value=" <%= user.addrRoad %>">
-                <input type=" text" name="addrComment" class="form-control" readonly style="width: 120px;"
-                  placeholder="참고항목" value=" <%= user.addrComment %>">
-              </div>
-              <input type=" text" name="addrJibun" class="form-control mb-2" readonly placeholder="지번주소"
-                value=" <%= user.addrJibun %>">
-              <input type=" text" name="addrDetail" class="form-control" placeholder="상세주소"
-                value=" <%= user.addrDetail %>">
-            </td>
-          </tr>
-          <tr>
-            <td colspan=" 2" class="text-center">
-              <button class="btn btn-success">
-                <%= (type === 'create' ? '가입' : '수정') %>
-              </button>
-              <a href="/<%= currents[0] %>/user" class="btn btn-secondary">리스트</a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </form>
-    <div class="btn-wrap">
+            </select>
+            <span class="px-2">-</span>
+            <input type="text" name="tel2" class="form-control" style="max-width: 80px;" min="3" maxlength="4">
+            <span class=" px-2">-</span>
+            <input type="text" name="tel3" class="form-control" style="max-width: 80px;" min="4" maxlength="4">
+          </td>
+        </tr>
+        <tr>
+          <td class=" title" rowspan="2">주소</td>
+          <td class="content form-inline">
+            <input type="text" name="addrPost" class="form-control mr-2" readonly style="max-width: 120px;"
+              placeholder="우편번호">
+            <a class=" btn btn-primary" id="btPostcode">우편번호찾기</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="d-flex">
+              <input type="text" name="addrRoad" class="form-control mb-2 flex-glow-1 mr-2" readonly
+                placeholder="도로명주소">
+              <input type=" text" name="addrComment" class="form-control" readonly style="width: 120px;"
+                placeholder="참고항목">
+            </div>
+            <input type=" text" name="addrJibun" class="form-control mb-2" readonly placeholder="지번주소">
+            <input type=" text" name="addrDetail" class="form-control" placeholder="상세주소">
+          </td>
+        </tr>
+        <tr>
+          <td colspan=" 2" class="text-center">
+            <button class="btn btn-success">가입</button>
+            <a href="/<%= currents[0] %>/user" class="btn btn-secondary">리스트</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </form>
+  <div class="btn-wrap">
 
-    </div>
+  </div>
 </section>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<% if(type ==='create') {  %>
 <script src="/js/user/validation.js"></script>
-<% } else { %>
-<script>
-  var f = document.userForm;
-
-  function onSubmitUserForm(f) {
-    if (f.username.value.trim() === '') {
-      alert('이름을 입력하세요')
-      f.username.focus();
-      return false;
-    }
-    if (!validation.isEmail(f.email.value.trim())) {
-      alert('이메일을 형식에 맞게 입력하세요')
-      f.email.focus();
-      return false;
-    }
-    return true;
-  }
-</script>
-<% } %>
 <script src="/js/<%= currents[1] %>/<%= currents[1] %>.js"></script>
 <%- include('../../inc/foot.ejs') %>
