--- a/views/admin/user/user-list.ejs
+++ b/views/admin/user/user-list.ejs
@@ -1,10 +1,13 @@
 <%- include('../../inc/head.ejs') %>
 <%- include('../../inc/header.ejs') %>
 <section class="user-wrapper list-wrapper wrapper">
-  <div class="my-2 d-flex">
-    <%- include('../../inc/search.ejs') %>
-    <%- include('../../inc/sort.ejs') %>
-    <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create" class="btn btn-primary ml-auto">회원등록</a>
+  <div class="my-2">
+    <div class="mb-2">총 레코드: <%= numeral(pager.totalRecord).format() %>개</div>
+    <div class="d-flex">
+      <%- include('../../inc/search.ejs') %>
+      <%- include('../../inc/sort.ejs') %>
+      <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create" class="btn btn-primary ml-auto">회원등록</a>
+    </div>
   </div>
   <table class="user-tbl table table-sm text-center border-bottom">
     <thead>
