--- a/views/board/gallery-list.ejs
+++ b/views/board/gallery-list.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/board.css">
+<link rel="stylesheet" href="/css/<%= currents[1] %>-<%= boardType %>.css">
 <article class="board-container gallery-type list-page">
   <ul class="list-wrap">
     <li class="list" data-link="/<%= currents[0] %>/board/1">
