--- a/views/board/gallery-view.ejs
+++ b/views/board/gallery-view.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/board.css">
+<link rel="stylesheet" href="/css/<%= currents[1] %>-<%= boardType %>.css">
 <article class="board-container gallery-type view-page">
   <table class="table">
     <tbody>
