--- a/views/inc/pager.ejs
+++ b/views/inc/pager.ejs
@@ -1,30 +1,29 @@
 <link rel="stylesheet" href="/css/pager.css">
+<% let pagerQuery = `/${currents[0]}/${currents[1]}?field=${field}&search=${search}` %>
 <div class="pager-wrapper">
 	<ul class="pager-wrap">
 		<li class="pager pager-first">
-			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=1" class="material-icons">first_page</a>
+			<a href="<%=pagerQuery%>&page=1" class="material-icons">first_page</a>
 		</li>
 		<li class="pager pager-prev-set">
-			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=<%= prevPager %>"
-				class="material-icons">keyboard_double_arrow_left</a>
+			<a href="<%=pagerQuery%>&page=<%= prevPager %>" class="material-icons">keyboard_double_arrow_left</a>
 		</li>
 		<li class="pager pager-prev">
-			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=<%= prevPage %>" class="material-icons">chevron_left</a>
+			<a href="<%=pagerQuery%>&page=<%= prevPage %>" class="material-icons">chevron_left</a>
 		</li>
 		<% for(let i=startPage; i<=endPage; i++) { %>
 		<li class="pager <%= page === i ? 'active' : '' %>">
-			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=<%= i %>"><%= i %></a>
+			<a href="<%=pagerQuery%>&page=<%= i %>"><%= i %></a>
 		</li>
 		<% } %>
 		<li class="pager pager-next">
-			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=<%= nextPage %>" class="material-icons">chevron_right</a>
+			<a href="<%=pagerQuery%>&page=<%= nextPage %>" class="material-icons">chevron_right</a>
 		</li>
 		<li class="pager pager-next-set">
-			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=<%= nextPager %>"
-				class="material-icons">keyboard_double_arrow_right</a>
+			<a href="<%=pagerQuery%>&page=<%= nextPager %>" class="material-icons">keyboard_double_arrow_right</a>
 		</li>
 		<li class="pager pager-last">
-			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=<%= totalPage %>" class="material-icons">last_page</a>
+			<a href="<%=pagerQuery%>&page=<%= totalPage %>" class="material-icons">last_page</a>
 		</li>
 	</ul>
 </div>
