--- a/public/scss/_common.scss
+++ b/public/scss/_common.scss
@@ -136,3 +136,19 @@ section.wrapper {
     }
   }
 }
+
+h2.title {
+  font-size: 1.75em;
+  color: $dark-color;
+  small {
+    color: $grey-color;
+  }
+}
+h3.title {
+  font-size: 1.5em;
+  color: $dark-color;
+}
+h3.title {
+  font-size: 1.25em;
+  color: $dark-color;
+}
