--- a/views/admin/board/board-form.ejs
+++ b/views/admin/board/board-form.ejs
@@ -1,7 +1,9 @@
 <%- include('../../inc/head.ejs') %>
 <%- include('../../inc/header.ejs') %>
 <section class="board-wrapper view-wrapper wrapper">
-  <%- include('./inc-select.ejs') %>
+  <h3 class="title bullet my-3"><%= boardTitle %>
+    <small> - 글작성</small>
+  </h3>
   <div class="tbl-wrap">
     <%- include(`../../board/${boardType}-form.ejs`) %>
   </div>
