--- a/views/board/default-list.ejs
+++ b/views/board/default-list.ejs
@@ -24,7 +24,7 @@
   </table>
   <%- // include('../inc/pager.ejs') %>
   <div class="text-center my-4">
-    <a href="/<%= currents[0] %>/board?type=create" class="btn btn-primary">글작성</a>
+    <a href="/<%= currents[0] %>/board?type=create&boardId=<%=boardId%>" class="btn btn-primary">글작성</a>
   </div>
 </article>
 <script src="/js/board/board.js"></script>
