board pager 작업중

--- a/views/admin/binit/board-init.ejs
+++ b/views/admin/binit/board-init.ejs
@@ -52,7 +52,7 @@
         </tr>
         <tr>
           <td colspan="4" class="text-center">
-            <button class="btn btn-primary btTableCreater">게시판 생성</button>
+            <button class="btn btn-primary btTableCreate">게시판 생성</button>
           </td>
         </tr>
       </tbody>
@@ -71,49 +71,55 @@
       </tr>
     </thead>
     <tbody>
-      <% for(let v of boards) {%>
-      <form method="POST" action="/<%= currents[0] %>/<%= currents[1] %>" class="binit-Update-form">
-        <tr>
-          <td>
-            <input type="hidden" name="_method" value="PUT">
-            <input type="hidden" name="id" value="<%=v.id%>">
-            <input type="text" name="title" class="form-control" value="<%=v.title%>">
-          </td>
-          <td>
-            <select type="text" name="boardType" class="form-control">
-              <option value="default" <%=(v.boardType ==='default'? 'selected' : '')%>>일반게시판</option>
-              <option value="gallery" <%=(v.boardType ==='gallery'? 'selected' : '')%>>갤러리게시판</option>
-            </select>
-          </td>
-          <td>
-            <select type="text" name="useImg" class="form-control ml-2">
-              <option value="0">사용안함</option>
-              <% for(let i=1; i<=10; i++) { %>
-              <option value="<%= i %>" <%=(v.useImg == i ? 'selected' : '')%>><%= i %>개</option>
-              <% } %>
-            </select>
-          </td>
-          <td>
-            <select type="text" name="useFile" class="form-control ml-2">
-              <option value="0">사용안함</option>
-              <% for(let i=1; i<=10; i++) { %>
-              <option value="<%= i %>" <%=(v.useFile == i ? 'selected' : '')%>><%= i %>개</option>
-              <% } %>
-            </select>
-          </td>
-          <td>
-            <select type="text" name="useComment" class="form-control">
-              <option value="true" <%=(v.useComment ? 'selected' : '')%>>사용</option>
-              <option value="false" <%=(v.useComment ? '':'selected')%>>사용안함</option>
-            </select>
-          </td>
-          <td>
-            <button type="button" class="btn btn-success" onclick="onChangeBoard('put', this);">수정</button>
-            <button type="button" class="btn btn-danger" onclick="onChangeBoard('delete', this);">삭제</button>
-          </td>
-        </tr>
-      </form>
-      <% } %>
+      <% for(let v of boards) { %> 
+        <form method="POST" action="/<%= currents[0] %>/<%= currents[1] %>" class="binit-update-form">
+          <tr>
+            <td>
+              <input type="hidden" name="_method" value="PUT">
+              <input type="hidden" name="id" value="<%= v.id %>">
+              <input type="text" name="title" class="form-control" value="<%= v.title %>">
+            </td>
+            <td>
+              <select type="text" name="boardType" class="form-control">
+                <option value="default" 
+                <%= (v.boardType === 'default' ? 'selected': '') %>>일반게시판</option>
+                <option value="gallery" 
+                <%= (v.boardType === 'gallery' ? 'selected': '') %>>갤러리게시판</option>
+              </select>
+            </td>
+            <td>
+              <select type="text" name="useImg" class="form-control ml-2">
+                <option value="0">사용안함</option>
+                <% for(let i=1; i<=10; i++) { %>
+                <option value="<%= i %>" 
+                <%= (v.useImg == i ? 'selected': '') %>><%= i %>개</option>
+                <% } %>
+              </select>
+            </td>
+            <td>
+              <select type="text" name="useFile" class="form-control ml-2">
+                <option value="0">사용안함</option>
+                <% for(let i=1; i<=2; i++) { %>
+                <option value="<%= i %>" 
+                <%= (v.useFile == i ? 'selected': '') %>><%= i %>개</option>
+                <% } %>
+              </select>
+            </td>
+            <td>
+              <select type="text" name="useComment" class="form-control">
+                <option value="true" 
+                <%= (v.useComment ? 'selected': '') %>>사용</option>
+                <option value="false" 
+                <%= (v.useComment ? '': 'selected') %>>사용안함</option>
+              </select>
+            </td>
+            <td>
+              <button type="button" class="btn btn-success" onclick="onChangeBoard('put', this);">수정</button>
+              <button type="button" class="btn btn-danger"onclick="onChangeBoard('delete', this);">삭제</button>
+            </td>
+          </tr>
+        </form>
+      <% } %> 
     </tbody>
   </table>
 </section>
