--- a/views/board/default-view.ejs
+++ b/views/board/default-view.ejs
@@ -16,19 +16,22 @@
       </tr>
       <tr>
         <td colspan="2">
-          국가안전보장에 관련되는 대외정책·군사정책과 국내정책의 수립에 관하여 국무회의의 심의에 앞서 대통령의 자문에 응하기 위하여 국가안전보장회의를 둔다.
-          대통령은 국무총리·국무위원·행정각부의 장 기타 법률이 정하는 공사의 직을 겸할 수 없다. 국민경제자문회의의 조직·직무범위 기타 필요한 사항은 법률로 정한다.
-          선거운동은 각급 선거관리위원회의 관리하에 법률이 정하는 범위안에서 하되, 균등한 기회가 보장되어야 한다. 통신·방송의 시설기준과 신문의 기능을 보장하기 위하여 필요한 사항은 법률로 정한다.
-          형사피해자는 법률이 정하는 바에 의하여 당해 사건의 재판절차에서 진술할 수 있다. 비상계엄이 선포된 때에는 법률이 정하는 바에 의하여 영장제도, 언론·출판·집회·결사의 자유, 정부나 법원의 권한에
-          관하여 특별한 조치를 할 수 있다.
+          대법원장과 대법관이 아닌 법관은 대법관회의의 동의를 얻어 대법원장이 임명한다. 행정각부의 설치·조직과 직무범위는 법률로 정한다. 정당은 법률이 정하는 바에 의하여 국가의 보호를 받으며, 국가는
+          법률이 정하는 바에 의하여 정당운영에 필요한 자금을 보조할 수 있다.
+
+          누구든지 체포 또는 구속을 당한 때에는 즉시 변호인의 조력을 받을 권리를 가진다. 다만, 형사피고인이 스스로 변호인을 구할 수 없을 때에는 법률이 정하는 바에 의하여 국가가 변호인을 붙인다.
+
+          대법원은 법률에 저촉되지 아니하는 범위안에서 소송에 관한 절차, 법원의 내부규율과 사무처리에 관한 규칙을 제정할 수 있다. 대법관의 임기는 6년으로 하며, 법률이 정하는 바에 의하여 연임할 수
+          있다.
+
+          국무위원은 국정에 관하여 대통령을 보좌하며, 국무회의의 구성원으로서 국정을 심의한다. 대한민국의 영토는 한반도와 그 부속도서로 한다. 제1항의 지시를 받은 당해 행정기관은 이에 응하여야 한다.
         </td>
       </tr>
     </tbody>
   </table>
-  <div class="tet-center my-4">
+  <div class="text-center my-4">
     <a href="/<%= currents[0] %>/board?boardType=<%=boardType%>" class="btn btn-primary">리스트</a>
-    <a href="/<%= currents[0] %>/board/1?boardType=<%=boardType%>&type=update"
-      class="btn btn-success float-right mx-1">수정</a>
-    <a href="#" class="btn btn-danger mx-1">삭제</a>
-  </div>
+    <a href="/<%= currents[0] %>/board/1?boardType=<%=boardType%>&type=update" class="btn btn-success float-right mx-1">수정</a>
+    <a href="#" class="btn btn-danger float-right mx-1">삭제</a>
+  </div> 
 </article>
