--- a/views/admin/board/inc-select.ejs
+++ b/views/admin/board/inc-select.ejs
@@ -1,19 +1,13 @@
 <div class="form-inline mb-2">
   <select name="tblId" class="form-control" onchange="goLocation(this);">
     <option value="">선택하세요</option>
-    <% for(let v of boardLists){ %>
-    <option value="/<%= currents[0] %>/<%= currents[1] %>?boardId=<%= v.id%>"
-      <%= (v.id == boardId) ? 'selected' : '' %>><%= v.title %> </option>
+    <% for(let v of boardLists) { %> 
+      <option value="/<%= currents[0] %>/<%= currents[1] %>?boardId=<%= v.id%> " <%= (v.id == boardId) ? 'selected' : ''%>><%= v.title %></option>
     <% } %>
-
   </select>
 </div>
 <script>
   function goLocation(el) {
-    if ($(el).val() !== '') location.href = $(el).val();
+    if($(el).val() !== '') location.href = $(el).val();
   }
 </script>
-
-
-<!--들어오는 값의 option의 value()이 바뀌면
-해당되는 링크로 보내주세요  -->
