--- a/views/admin/cate/cate.ejs
+++ b/views/admin/cate/cate.ejs
@@ -1,6 +1,6 @@
 <%- include('../../inc/head.ejs') %>
-  <%- include('../../inc/header.ejs') %>
-    <section class="main-wrapper wrapper">
-      카테고리
-    </section>
-    <%- include('../../inc/foot.ejs') %>
+<%- include('../../inc/header.ejs') %>
+<section class="cate-wrapper wrapper">
+  카테고리 관리
+</section>
+<%- include('../../inc/foot.ejs') %>
