--- a/views/admin/order/order-form.ejs
+++ b/views/admin/order/order-form.ejs
@@ -11,27 +11,25 @@
       <tbody>
         <tr>
           <td class="title" style="width: 15%;">주문번호</td>
+          <td class="content">20211029-123657</td>
+        </tr>
+        <tr>
+          <td class="title">주문자</td>
           <td class="content">
-            20211029-1234567
+            <a href="/<%= currents[0] %>/user/1">booldook / 임덕규 / 010-8332-8040</a>
           </td>
         </tr>
         <tr>
-          <td class="title" style="width: 15%;">주문자</td>
+          <td class="title">주문상품</td>
           <td class="content">
-            <a href="/<%= currents[0] %>/user/1">woojungyang / 양우정 / 010-9477-8896</a>
-          </td>
-        </tr>
-        <tr>
-          <td class="title" style="width: 15%;">주문상품</td>
-          <td class="content">
-            <table class="table text-center border-bottom tbl-prd table-sm">
+            <table class="table table-sm text-center border-bottom tbl-prd">
               <thead>
                 <tr>
                   <th>상품이미지</th>
                   <th>상품명</th>
                   <th>가격</th>
                   <th>개수</th>
-                  <th>관리</th>
+                  <th>상태</th>
                 </tr>
               </thead>
               <tbody>
@@ -42,10 +40,8 @@
                   <td class="text-left">
                     <a href="/<%= currents[0] %>/prd/1?type=update">매우 맛있는 아이스크림</a>
                   </td>
-                  <td class="text-right">
-                    <div class="price-sale">2,500원</div>
-                    <div class="price-sale">2개</div>
-                  </td>
+                  <td class="text-right">2,500원</td>
+                  <td class="text-right">2개</td>
                   <td>판매중</td>
                 </tr>
               </tbody>
@@ -54,20 +50,16 @@
         </tr>
         <tr>
           <td class="title">주문가격</td>
-          <td class="content">
-            2,5000원
-          </td>
+          <td class="content">25,000원</td>
         </tr>
         <tr>
           <td class="title">주문일</td>
-          <td class="content">
-            2021-10-29 15:29:43
-          </td>
+          <td class="content">2021-10-29 15:35:25</td>
         </tr>
         <tr>
           <td class="title">상태</td>
-          <td>
-            <select name="status" class="form-control-sm">
+          <td class="content">
+            <select name="status" class="form-control form-control-sm" style="max-width: 200px;">
               <option value="0">미주문처리</option>
               <option value="1">주문완료</option>
               <option value="2">결제완료</option>
@@ -82,9 +74,9 @@
     <div class="text-center my-4">
       <a href="/<%= currents[0] %>/order" class="btn btn-primary">리스트</a>
       <button class="btn btn-success float-right mx-1">수정</button>
-      <button type="reset" class="btn btn-danger float-right mx-1">삭제</button>
+      <button class="btn btn-danger float-right mx-1">삭제</button>
     </div>
   </form>
 </section>
-<script src="/js/<%= currents[1] %>/<%= currents[1] %>.js"></script>
+<script src="/js/<%= currents[1] %>/<%= currents[1] %>-form.js"></script>
 <%- include('../../inc/foot.ejs') %>
