--- a/views/admin/prd/prd-form.ejs
+++ b/views/admin/prd/prd-form.ejs
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/css/quill.snow.css">
 <section class="prd-wrapper wrapper">
   <h4 class="title bullet my-2">
-    상품 <%= (type === 'create' ? '생성' : '수정') %>
+    상품 <%= (type === 'create' ? '생성' : '수정') %> 
   </h4>
   <form action="/<%= currents[0] %>/prd" method="post" enctype="multipart/form-data">
     <input type="hidden" name="id" value="1">
@@ -31,21 +31,19 @@
         <tr>
           <td class="title">요약설명</td>
           <td>
-            <textarea name="content" class="form-control" placeholder="내용을 입력하세요."
-              style="min-height: 200px;"></textarea>
+            <textarea name="content" class="form-control" placeholder="내용을 입력하세요." style="min-height: 200px;"></textarea>
           </td>
         </tr>
         <tr>
           <td colspan="2">
-            <div style="min-height: 200px;" id="editor">
-              <div>
+            <div id="editor" style="min-height: 200px;"></div>
           </td>
         </tr>
         <tr>
           <td>이미지 첨부</td>
           <td>
-            <% for(let i=1; i<=10; i++) { %>
-            <input type="file" name="img" class="form-control-file mb-2">
+            <% for(let i=1; i<=10; i++) { %> 
+              <input type="file" name="img" class="form-control-file mb-2">
             <% } %>
           </td>
         </tr>
@@ -57,6 +55,7 @@
       <button type="reset" class="btn btn-danger float-right mx-1">다시작성</button>
     </div>
   </form>
-  <script src="/js/quill.min.js"></script>
-  <script src="/js/<%= currents[1] %>/<%= currents[1] %>.js"></script>
-  <%- include('../../inc/foot.ejs') %>
+</section>
+<script src="/js/quill.min.js"></script>
+<script src="/js/<%= currents[1] %>/<%= currents[1] %>.js"></script>
+<%- include('../../inc/foot.ejs') %>
