--- a/views/board/gallery-form.ejs
+++ b/views/board/gallery-form.ejs
@@ -1,53 +1,53 @@
 <link rel="stylesheet" href="/css/<%= currents[1] %>-<%= boardType %>.css">
 <article class="board-container default-type view-page">
   <form action="/<%= currents[0] %>/<%= currents[1] %>" method="post" enctype="multipart/form-data" name="galleryForm">
-    <input type="hidden" name="boardId" value="<%= boardId%>>
-    <table class=" table border-bottom">
-    <tbody>
-      <tr>
-        <td class="title" style="width: 15%;">제목</td>
-        <td class="content">
-          <input type="text" name="title" class="form-control" placeholder="제목">
-        </td>
-      </tr>
-      <tr>
-        <td class="title">작성자</td>
-        <td class="content">
-          <input type="text" name="writer" class="form-control" placeholder="작성자">
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <textarea name="content" class="form-control" placeholder="내용을 입력하세요." style="min-height: 200px;"></textarea>
-        </td>
-      </tr>
-      <% if(useImg) { %>
-      <tr>
-        <td>이미지 첨부</td>
-        <td>
-          <% for(let i=0; i<useImg; i++) { %>
-          <input type="file" name="img" class="form-control-file mb-2">
-          <% } %>
-        </td>
-      </tr>
-      <% } %>
-      <% if(useFile) { %>
-      <tr>
-        <td>파일 첨부</td>
-        <td>
-          <% for(let i=0; i<useFile; i++) { %>
-          <input type="file" name="pds" class="form-control-file mb-2">
-          <% } %>
-        </td>
-      </tr>
-      <% } %>
-    </tbody>
+    <input type="hidden" name="boardId" value="<%= boardId %>">
+    <table class="table border-bottom">
+      <tbody>
+        <tr>
+          <td class="title" style="width: 15%;">제목</td>
+          <td class="content">
+            <input type="text" name="title" class="form-control" placeholder="제목">
+          </td>
+        </tr>
+        <tr>
+          <td class="title">작성자</td>
+          <td class="content">
+            <input type="text" name="writer" class="form-control" placeholder="작성자">
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <textarea name="content" class="form-control" placeholder="내용을 입력하세요." style="min-height: 200px;"></textarea>
+          </td>
+        </tr>
+        <% if(useImg) { %>
+        <tr>
+          <td>이미지 첨부</td>
+          <td>
+            <% for(let i=0; i<useImg; i++) { %> 
+              <input type="file" name="img" class="form-control-file mb-2">
+            <% } %>
+          </td>
+        </tr>
+        <% } %>
+        <% if(useFile) { %>
+        <tr>
+          <td>파일 첨부</td>
+          <td>
+            <% for(let i=0; i<useFile; i++) { %> 
+              <input type="file" name="pds" class="form-control-file mb-2">
+            <% } %>
+          </td>
+        </tr>
+        <% } %>
+      </tbody>
     </table>
     <div class="text-center my-4">
-      <a href="/<%= currents[0] %>/<%= currents[1] %>?boardType=<%=boardType%>"
-        class="btn btn-primary float-right ">리스트</a>
-      <button class="btn btn-success mx-1">수정</button>
+      <a href="/<%= currents[0] %>/<%= currents[1] %>?boardType=<%=boardType%>" class="btn btn-primary float-right">리스트</a>
+      <button class="btn btn-primary mx-1">저장</button>
       <button type="reset" class="btn btn-danger mx-1">다시작성</button>
     </div>
   </form>
 </article>
+<script src="/js/<%= currents[1] %>/<%= boardType %>-form.js"></script>
