--- a/views/inc/sort.ejs
+++ b/views/inc/sort.ejs
@@ -3,10 +3,12 @@
     <input type="hidden" name="field" value="<%= field %>">
     <input type="hidden" name="search" value="<%= search %>">
     <select name="sort" onchange="this.form.submit();" class="form-control">
-      <option value="desc" <%= (sort === '' || sort === 'desc' ? 'selected' : '') %>>
-        내림차순</option>
-      <option value="asc" <%= (sort === 'asc' ? 'selected' : '') %>>
-        오름차순</option>
+      <option value="desc" 
+      <%= (sort === '' || sort === 'desc' ? 'selected' : '') %>>
+      내림차순</option>
+      <option value="asc"
+      <%= (sort === 'asc' ? 'selected' : '') %>>
+      오름차순</option>
     </select>
   </form>
-</div>
+  </div>
