--- a/views/admin/user/user-list.ejs
+++ b/views/admin/user/user-list.ejs
@@ -2,10 +2,11 @@
 <%- include('../../inc/header.ejs') %>
 <section class="user-wrapper list-wrapper wrapper">
   <div class="my-2">
-    <div class="mb-2">총 레코드: <%= numeral(pager.totalRecord).format() %>개</div>
+    <div class="mb-2">총 레코드: <%= totalRecord %>개</div>
     <div class="d-flex">
-      <%- include('../../inc/search.ejs') %> 
-      <%- include('../../inc/sort.ejs') %> 
+      <%- include('../../inc/search.ejs') %>
+      <%- include('../../inc/sort.ejs') %>
+      <%- include('../../inc/paranoid.ejs') %>
       <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create" class="btn btn-primary ml-auto">회원등록</a>
     </div>
   </div>
@@ -22,7 +23,7 @@
       </tr>
     </thead>
     <tbody>
-      <% for(let v of users) { %> 
+      <% for(let v of lists) { %>
       <tr>
         <td rowspan="2"><%= v.id %></td>
         <td>
@@ -34,7 +35,8 @@
         <td><%= v.level %></td>
         <td rowspan="2">
           <a href="/<%= currents[0] %>/<%= currents[1] %>/<%= v.id %>" class="btn btn-success">수정</a>
-          <form action="/<%= currents[0] %>/<%= currents[1] %>" method="POST" class="d-inline-block">
+          <form action="/<%= currents[0] %>/<%= currents[1] %>" method="POST" class="d-inline-block"
+            name="userDeleteForm">
             <input type="hidden" name="_method" value="DELETE">
             <input type="hidden" name="id" value="<%= v.id %>">
             <button class="btn btn-danger">삭제</button>
@@ -55,7 +57,8 @@
     </tbody>
   </table>
   <div class="pager-wrap">
-    <%- include('../../inc/pager.ejs', pager) %> 
+    <%- include('../../inc/pager.ejs', pager) %>
   </div>
 </section>
+<script src="/js/<%= currents[1] %>/<%= currents[1] %>.js"></script>
 <%- include('../../inc/foot.ejs') %>
