--- a/views/board/default-list.ejs
+++ b/views/board/default-list.ejs
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="/css/<%= currents[1] %>-<%= boardType %>.css">
 <article class="board-container default-type list-page">
   <div class="my-2">
-    <div class="mb-2">총 레코드: <%= numeral(pager.totalRecord).format() %>개</div>
+    <div class="mb-2">총 레코드: <%= totalRecord%>개</div>
     <div class="d-flex">
-      <%- include('../inc/search.ejs') %> 
-      <%- include('../inc/sort.ejs') %> 
+      <%- include('../inc/search.ejs') %>
+      <%- include('../inc/sort.ejs') %>
       <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create" class="btn btn-primary ml-auto">게시글 작성</a>
     </div>
   </div>
@@ -19,7 +19,7 @@
       </tr>
     </thead>
     <tbody>
-      <% for(let v of lists) { %> 
+      <% for(let v of lists) { %>
       <tr>
         <td><%= v.id %></td>
         <td class="text-left">
