--- a/views/inc/pager.ejs
+++ b/views/inc/pager.ejs
@@ -1,5 +1,8 @@
 <link rel="stylesheet" href="/css/pager.css">
-<% let pagerQuery = `/${currents[0]}/${currents[1]}?field=${field}&search=${search}` %> 
+<% 
+let pagerQuery = `/${currents[0]}/${currents[1]}?field=${field}&search=${search}`
+if(currents[1] === 'board') pagerQuery += `&boardId=${boardId}`
+%>
 <div class="pager-wrapper">
   <ul class="pager-wrap">
     <li class="pager pager-first">
