--- a/views/board/gallery-list.ejs
+++ b/views/board/gallery-list.ejs
@@ -1,24 +1,24 @@
 <link rel="stylesheet" href="/css/<%= currents[1] %>-<%= boardType %>.css">
 <article class="board-container gallery-type list-page">
   <div class="my-2">
-    <div class="mb-2">총 레코드: <%= numeral(pager.totalRecord).format() %>개</div>
+    <div class="mb-2">총 레코드: <%=totalRecord%>개</div>
     <div class="d-flex">
-      <%- include('../inc/search.ejs') %> 
-      <%- include('../inc/sort.ejs') %> 
+      <%- include('../inc/search.ejs') %>
+      <%- include('../inc/sort.ejs') %>
       <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create" class="btn btn-primary ml-auto">게시글 작성</a>
     </div>
   </div>
   <ul class="list-wrap">
     <% for(let v of lists) { %>
-      <li class="list" data-link="/<%= currents[0] %>/<%= currents[1] %>/<%= v.id %>?boardId=<%= boardId %>">
-        <div class="img-wrap" style="background-image: url('<%= v.thumbSrc %>');"></div>
-        <div class="content-wrap">
-          <div class="title"><%= v.title %></div>
-        </div>
-      </li>
+    <li class="list" data-link="/<%= currents[0] %>/<%= currents[1] %>/<%= v.id %>?boardId=<%= boardId %>">
+      <div class="img-wrap" style="background-image: url('<%= v.thumbSrc %>');"></div>
+      <div class="content-wrap">
+        <div class="title"><%= v.title %></div>
+      </div>
+    </li>
     <% } %>
   </ul>
-  <%- include('../inc/pager.ejs', pager) %> 
+  <%- include('../inc/pager.ejs', pager) %>
   <div class="text-center my-4">
     <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create&boardId=<%= boardId %>" class="btn btn-primary">글작성</a>
   </div>
