--- a/public/css/board-default.css
+++ b/public/css/board-default.css
@@ -1,1 +1,1 @@
-/* No CSS */
+.board-container.default-type.view-page .td-content{padding:0.25em 0}.board-container.default-type.view-page .td-content>div{border:1px solid #dee2ed;padding:1em;min-height:200px}
