--- a/views/admin/board/board-list.ejs
+++ b/views/admin/board/board-list.ejs
@@ -1,7 +1,8 @@
 <%- include('../../inc/head.ejs') %>
 <%- include('../../inc/header.ejs') %>
 <section class="board-wrapper list-wrapper wrapper">
-  <%- include('./inc-select.ejs') %> 
+  <%- include('./inc-select.ejs') %>
+  <h3 class="title bullet my-3"><%= boardTitle %></h3>
   <div class="tbl-wrap">
     <%- include(`../../board/${boardType}-list.ejs`) %>
   </div>
