--- a/views/admin/board/board-view.ejs
+++ b/views/admin/board/board-view.ejs
@@ -1,10 +1,9 @@
 <%- include('../../inc/head.ejs') %>
 <%- include('../../inc/header.ejs') %>
 <section class="board-wrapper view-wrapper wrapper">
-  <%- include('./inc-select.ejs') %> 
+  <h3 class="title bullet my-3"><%= boardTitle %><small> - 글 상세보기</small></h3>
   <div class="tbl-wrap">
-    <%- include(`../../board/${boardType}-view.ejs`) %> 
+    <%- include(`../../board/${boardType}-view.ejs`) %>
   </div>
 </section>
 <%- include('../../inc/foot.ejs') %>
-
