--- a/views/board/default-list.ejs
+++ b/views/board/default-list.ejs
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="/css/<%= currents[1] %>-<%= boardType %>.css">
 <article class="board-container default-type list-page">
   <div class="my-2">
-    <div class="mb-2">총 레코드: <%= totalRecord%>개</div>
     <div class="d-flex">
       <%- include('../inc/search.ejs') %>
       <%- include('../inc/sort.ejs') %>
-      <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create" class="btn btn-primary ml-auto">게시글 작성</a>
+      <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create&boardId=<%= boardId %>"
+        class="btn btn-primary ml-auto">게시글 작성</a>
     </div>
   </div>
   <table class="table text-center border-bottom">
@@ -23,7 +23,8 @@
       <tr>
         <td><%= v.id %></td>
         <td class="text-left">
-          <a href="/<%= currents[0] %>/<%= currents[1] %>/<%= v.id %>?boardId=<%= v.id %>"><%= v.title %></a>
+          <a
+            href="/<%= currents[0] %>/<%= currents[1] %>/<%= v.id %>?boardId=<%= boardId %>&page=<%=page%>"><%= v.title %></a>
         </td>
         <td><%= v.writer %></td>
         <td><%= v.updatedAt %></td>
@@ -32,9 +33,12 @@
       <% } %>
     </tbody>
   </table>
-  <%- include('../inc/pager.ejs', pager) %>
-  <div class="text-center my-4">
-    <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create&boardId=<%= boardId %>" class="btn btn-primary">글작성</a>
+  <div class="mb-2">
+    <p class="text-right">총 레코드: <%= totalRecord %>개</p>
   </div>
+  <%- include('../inc/pager.ejs', pager) %>
+  <!--   <div class="text-center my-4">
+    <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create&boardId=<%= boardId %>" class="btn btn-primary">글작성</a>
+  </div> -->
 </article>
-<script src="/js/<%= currents[0] %>/<%= boardType %>-list.js"></script>
+<script src="/js/<%= currents[1] %>/<%= boardType %>-list.js"></script>
