--- a/views/board/default-view.ejs
+++ b/views/board/default-view.ejs
@@ -3,35 +3,49 @@
   <table class="table">
     <tbody>
       <tr>
+        <td class="title" style="width:160px">번호 </td>
+        <td class="content"><%= list.id %> </td>
+      </tr>
+      <tr>
         <td class="title">제목</td>
-        <td class="content">공지사항 입니다.</td>
+        <td class="content"><%= list.title %> </td>
       </tr>
       <tr>
         <td class="title">작성자</td>
-        <td class="content">관리자</td>
+        <td class="content"><%= list.writer %> </td>
       </tr>
       <tr>
         <td class="title">작성일</td>
-        <td class="content">2021-10-28 11:13:08</td>
+        <td class="content"><%= list.updatedAt %> </td>
       </tr>
       <tr>
-        <td colspan="2">
-          대법원장과 대법관이 아닌 법관은 대법관회의의 동의를 얻어 대법원장이 임명한다. 행정각부의 설치·조직과 직무범위는 법률로 정한다. 정당은 법률이 정하는 바에 의하여 국가의 보호를 받으며, 국가는
-          법률이 정하는 바에 의하여 정당운영에 필요한 자금을 보조할 수 있다.
-
-          누구든지 체포 또는 구속을 당한 때에는 즉시 변호인의 조력을 받을 권리를 가진다. 다만, 형사피고인이 스스로 변호인을 구할 수 없을 때에는 법률이 정하는 바에 의하여 국가가 변호인을 붙인다.
-
-          대법원은 법률에 저촉되지 아니하는 범위안에서 소송에 관한 절차, 법원의 내부규율과 사무처리에 관한 규칙을 제정할 수 있다. 대법관의 임기는 6년으로 하며, 법률이 정하는 바에 의하여 연임할 수
-          있다.
-
-          국무위원은 국정에 관하여 대통령을 보좌하며, 국무회의의 구성원으로서 국정을 심의한다. 대한민국의 영토는 한반도와 그 부속도서로 한다. 제1항의 지시를 받은 당해 행정기관은 이에 응하여야 한다.
+        <td colspan="2" class="td-content">
+          <div> <%= list.content %></div>
         </td>
       </tr>
+      <% for(let v of list.files) { %>
+      <tr>
+        <td class="title">첨부 <%= v.type ==='I' ? '이미지' :'파일' %> </td>
+        <td class="content">
+          <% if (v.type ==='I') { %>
+          <div class="file-img my-2" style="width: 120px;">
+            <img src=" <%= v.thumbSrc %>" class="w-100">
+          </div>
+          <% } else { %>
+          <div class="file-link">
+            <a href="/<%= currents[0]%>/download/<%=v.id%> "><%= v.name %> </a>
+          </div>
+          <% } %>
+        </td>
+      </tr>
+      <% } %>
+
     </tbody>
   </table>
   <div class="text-center my-4">
-    <a href="/<%= currents[0] %>/board?boardType=<%=boardType%>" class="btn btn-primary">리스트</a>
-    <a href="/<%= currents[0] %>/board/1?boardType=<%=boardType%>&type=update" class="btn btn-success float-right mx-1">수정</a>
+    <a href="/<%= currents[0] %>/<%= currents[1] %>?boardId=<%=boardId%>&page=<%=page%>" class="btn btn-primary">리스트</a>
+    <a href="/<%= currents[0] %>/<%= currents[1] %>/<%=list.id%>?boardId=<%=boardId%>&type=update"
+      class="btn btn-success float-right mx-1">수정</a>
     <a href="#" class="btn btn-danger float-right mx-1">삭제</a>
-  </div> 
+  </div>
 </article>
