--- a/views/board/gallery-view.ejs
+++ b/views/board/gallery-view.ejs
@@ -3,40 +3,55 @@
   <table class="table">
     <tbody>
       <tr>
+        <td class="title" style="width: 160px;">번호</td>
+        <td class="content"><%= list.id %></td>
+      </tr>
+      <tr>
         <td class="title">제목</td>
-        <td class="content">공지사항 입니다.</td>
+        <td class="content"><%= list.title %></td>
       </tr>
       <tr>
         <td class="title">작성자</td>
-        <td class="content">관리자</td>
+        <td class="content"><%= list.writer %></td>
       </tr>
       <tr>
         <td class="title">작성일</td>
-        <td class="content">2021-10-28 11:13:08</td>
+        <td class="content"><%= list.updatedAt %></td>
       </tr>
-      <tr>
-        <td colspan="2" class="text-center">
-          <div class="my-1">
-            <img src="/img/team1.jpg" alt="img" class="mw-100">
-          </div>
-          <div class="my-1">
-            <img src="/img/team2.jpg" alt="img" class="mw-100">
-          </div>
-        </td>
-      </tr>
+      <% for(let v of list.files) { %>
+      <% if(v.type === 'I') { %>
       <tr>
         <td colspan="2">
-          대법원장과 대법관이 아닌 법관은 대법관회의의 동의를 얻어 대법원장이 임명한다. 행정각부의 설치·조직과 직무범위는 법률로 정한다. 정당은 법률이 정하는 바에 의하여 국가의 보호를 받으며, 국가는
-          법률이 정하는 바에 의하여 정당운영에 필요한 자금을 보조할 수 있다.
-
-          누구든지 체포 또는 구속을 당한 때에는 즉시 변호인의 조력을 받을 권리를 가진다. 다만, 형사피고인이 스스로 변호인을 구할 수 없을 때에는 법률이 정하는 바에 의하여 국가가 변호인을 붙인다.
+          <div class="file-img my-2">
+            <img src="<%= v.thumbSrc %>" class="mw-100">
+          </div>
         </td>
       </tr>
+      <% } %>
+      <% } %>
+      <tr>
+        <td colspan="2" class="td-content">
+          <div><%= list.content %></div>
+        </td>
+      </tr>
+      <% for(let v of list.files) { %>
+      <% if(v.type === 'F') { %>
+      <tr>
+        <td class="title">첨부 파일</td>
+        <td class="content">
+          <div class="file-link">
+            <a href="/<%= currents[0] %>/download/<%=v.id%>"><%= v.name %></a>
+          </div>
+        </td>
+      </tr>
+      <% } %>
+      <% } %>
     </tbody>
   </table>
   <div class="text-center my-4">
-    <a href="/<%= currents[0] %>/board?boardType=<%=boardType%>" class="btn btn-primary">리스트</a>
-    <a href="/<%= currents[0] %>/board/1?boardType=<%=boardType%>&type=update" class="btn btn-success float-right mx-1">수정</a>
+    <a href="/<%= currents[0] %>/<%= currents[1] %>?boardId=<%=boardId%>&page=<%=page%>" class="btn btn-primary">리스트</a>
+    <a href="/<%= currents[0] %>/<%= currents[1] %>/<%=list.id%>?boardId=<%=boardId%>&type=update"
+      class="btn btn-success float-right mx-1">수정</a>
     <a href="#" class="btn btn-danger float-right mx-1">삭제</a>
-  </div> 
+  </div>
 </article>
