--- a/views/board/gallery-list.ejs
+++ b/views/board/gallery-list.ejs
@@ -1,26 +1,32 @@
 <link rel="stylesheet" href="/css/<%= currents[1] %>-<%= boardType %>.css">
 <article class="board-container gallery-type list-page">
   <div class="my-2">
-    <div class="mb-2">총 레코드: <%=totalRecord%>개</div>
     <div class="d-flex">
       <%- include('../inc/search.ejs') %>
       <%- include('../inc/sort.ejs') %>
-      <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create" class="btn btn-primary ml-auto">게시글 작성</a>
+      <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create&boardId=<%= boardId %>"
+        class="btn btn-primary ml-auto">게시글 작성</a>
     </div>
   </div>
   <ul class="list-wrap">
     <% for(let v of lists) { %>
-    <li class="list" data-link="/<%= currents[0] %>/<%= currents[1] %>/<%= v.id %>?boardId=<%= boardId %>">
-      <div class="img-wrap" style="background-image: url('<%= v.thumbSrc %>');"></div>
+    <li class="list"
+      data-link="/<%= currents[0] %>/<%= currents[1] %>/<%= v.id %>?boardId=<%= boardId %>&page=<%=page%>">
+      <div class="img-wrap"
+        style="background-image: url('<%= v.files && v.files.length ? v.files[0].thumbSrc : `https://via.placeholder.com/300?text=No+Image` %>');">
+      </div>
       <div class="content-wrap">
         <div class="title"><%= v.title %></div>
       </div>
     </li>
     <% } %>
   </ul>
-  <%- include('../inc/pager.ejs', pager) %>
-  <div class="text-center my-4">
-    <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create&boardId=<%= boardId %>" class="btn btn-primary">글작성</a>
+  <div class="mb-2">
+    <p class="text-right">총 레코드: <%= totalRecord %>개</p>
   </div>
+  <%- include('../inc/pager.ejs', pager) %>
+  <!--   <div class="text-center my-4">
+    <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create&boardId=<%= boardId %>" class="btn btn-primary">글작성</a>
+  </div> -->
 </article>
-<script src="/js/<%= currents[0] %>/<%= boardType %>-list.js"></script>
+<script src="/js/<%= currents[1] %>/<%= boardType %>-list.js"></script>
