--- a/views/board/default-view.ejs
+++ b/views/board/default-view.ejs
@@ -3,49 +3,43 @@
   <table class="table">
     <tbody>
       <tr>
-        <td class="title" style="width:160px">번호 </td>
-        <td class="content"><%= list.id %> </td>
+        <td class="title" style="width: 160px;">번호</td>
+        <td class="content"><%= list.id %></td>
       </tr>
       <tr>
         <td class="title">제목</td>
-        <td class="content"><%= list.title %> </td>
+        <td class="content"><%= list.title %></td>
       </tr>
       <tr>
         <td class="title">작성자</td>
-        <td class="content"><%= list.writer %> </td>
+        <td class="content"><%= list.writer %></td>
       </tr>
       <tr>
         <td class="title">작성일</td>
-        <td class="content"><%= list.updatedAt %> </td>
+        <td class="content"><%= list.updatedAt %></td>
       </tr>
       <tr>
         <td colspan="2" class="td-content">
-          <div> <%= list.content %></div>
+          <div><%= list.content %></div>
         </td>
       </tr>
       <% for(let v of list.files) { %>
       <tr>
-        <td class="title">첨부 <%= v.type ==='I' ? '이미지' :'파일' %> </td>
+        <td class="title">첨부<%= v.type === 'I' ? '이미지' : '파일' %></td>
         <td class="content">
-          <% if (v.type ==='I') { %>
+          <% if(v.type === 'I') { %>
           <div class="file-img my-2" style="width: 120px;">
-            <img src=" <%= v.thumbSrc %>" class="w-100">
+            <img src="<%= v.thumbSrc %>" class="w-100">
           </div>
           <% } else { %>
           <div class="file-link">
-            <a href="/<%= currents[0]%>/download/<%=v.id%> "><%= v.name %> </a>
+            <a href="/<%= currents[0] %>/download/<%=v.id%>"><%= v.name %></a>
           </div>
           <% } %>
         </td>
       </tr>
       <% } %>
-
     </tbody>
   </table>
-  <div class="text-center my-4">
-    <a href="/<%= currents[0] %>/<%= currents[1] %>?boardId=<%=boardId%>&page=<%=page%>" class="btn btn-primary">리스트</a>
-    <a href="/<%= currents[0] %>/<%= currents[1] %>/<%=list.id%>?boardId=<%=boardId%>&type=update"
-      class="btn btn-success float-right mx-1">수정</a>
-    <a href="#" class="btn btn-danger float-right mx-1">삭제</a>
-  </div>
+  <%- include('./inc/view-bottom.ejs', { id: list.id }) %>
 </article>
