--- a/views/admin/user/user-list.ejs
+++ b/views/admin/user/user-list.ejs
@@ -2,7 +2,6 @@
 <%- include('../../inc/header.ejs') %>
 <section class="user-wrapper list-wrapper wrapper">
   <div class="my-2">
-    <div class="mb-2">총 레코드: <%= totalRecord %>개</div>
     <div class="d-flex">
       <%- include('../../inc/search.ejs') %>
       <%- include('../../inc/sort.ejs') %>
@@ -56,6 +55,9 @@
       <% } %>
     </tbody>
   </table>
+  <div class="mb-2">
+    <p class="text-right">총 레코드: <%= totalRecord %>개</p>
+  </div>
   <div class="pager-wrap">
     <%- include('../../inc/pager.ejs', pager) %>
   </div>
