--- a/views/board/default-list.ejs
+++ b/views/board/default-list.ejs
@@ -4,8 +4,7 @@
     <div class="d-flex">
       <%- include('../inc/search.ejs') %>
       <%- include('../inc/sort.ejs') %>
-      <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create&boardId=<%= boardId %>"
-        class="btn btn-primary ml-auto">게시글 작성</a>
+      <a href="<%= goList %>&type=create" class="btn btn-primary ml-auto">게시글 작성</a>
     </div>
   </div>
   <table class="table text-center border-bottom">
@@ -23,8 +22,7 @@
       <tr>
         <td><%= v.id %></td>
         <td class="text-left">
-          <a
-            href="/<%= currents[0] %>/<%= currents[1] %>/<%= v.id %>?boardId=<%= boardId %>&page=<%=page%>"><%= v.title %></a>
+          <a href="<%= goPath %>/<%= v.id %>?<%= goQuery %>"><%= v.title %></a>
         </td>
         <td><%= v.writer %></td>
         <td><%= v.updatedAt %></td>
