--- a/views/board/gallery-list.ejs
+++ b/views/board/gallery-list.ejs
@@ -4,14 +4,13 @@
     <div class="d-flex">
       <%- include('../inc/search.ejs') %>
       <%- include('../inc/sort.ejs') %>
-      <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create&boardId=<%= boardId %>"
-        class="btn btn-primary ml-auto">게시글 작성</a>
+      <a href="<%= goList %>&type=create" class="btn btn-primary ml-auto">게시글 작성</a>
     </div>
   </div>
   <ul class="list-wrap">
     <% for(let v of lists) { %>
-    <li class="list"
-      data-link="/<%= currents[0] %>/<%= currents[1] %>/<%= v.id %>?boardId=<%= boardId %>&page=<%=page%>">
+    <li class="list" data-link="<%= goPath %>/<%= v.id %>?<%= goQuery %>">
+
       <div class="img-wrap"
         style="background-image: url('<%= v.files && v.files.length ? v.files[0].thumbSrc : `https://via.placeholder.com/300?text=No+Image` %>');">
       </div>
