--- a/views/board/gallery-view.ejs
+++ b/views/board/gallery-view.ejs
@@ -23,7 +23,7 @@
       <tr>
         <td colspan="2">
           <div class="file-img my-2">
-            <img src="<%= v.thumbSrc %>" class="mw-100">
+            <img src="<%= v.thumbSrc %>" class="w-100">
           </div>
         </td>
       </tr>
@@ -48,10 +48,5 @@
       <% } %>
     </tbody>
   </table>
-  <div class="text-center my-4">
-    <a href="/<%= currents[0] %>/<%= currents[1] %>?boardId=<%=boardId%>&page=<%=page%>" class="btn btn-primary">리스트</a>
-    <a href="/<%= currents[0] %>/<%= currents[1] %>/<%=list.id%>?boardId=<%=boardId%>&type=update"
-      class="btn btn-success float-right mx-1">수정</a>
-    <a href="#" class="btn btn-danger float-right mx-1">삭제</a>
-  </div>
+  <%- include('./inc/view-bottom.ejs', { id: list.id }) %>
 </article>
