--- a/views/inc/pager.ejs
+++ b/views/inc/pager.ejs
@@ -1,32 +1,28 @@
 <link rel="stylesheet" href="/css/pager.css">
-<% 
-let pagerQuery = `/${currents[0]}/${currents[1]}?field=${field}&search=${search}`
-if(currents[1] === 'board') pagerQuery += `&boardId=${boardId}`
-%>
 <div class="pager-wrapper">
   <ul class="pager-wrap">
     <li class="pager pager-first">
-      <a href="<%=pagerQuery%>&page=1" class="material-icons">first_page</a>
+      <a href="<%=goPager%>&page=1" class="material-icons">first_page</a>
     </li>
     <li class="pager pager-prev-set">
-      <a href="<%=pagerQuery%>&page=<%= prevPager %>" class="material-icons">keyboard_double_arrow_left</a>
+      <a href="<%=goPager%>&page=<%= prevPager %>" class="material-icons">keyboard_double_arrow_left</a>
     </li>
     <li class="pager pager-prev">
-      <a href="<%=pagerQuery%>&page=<%= prevPage %>" class="material-icons">chevron_left</a>
+      <a href="<%=goPager%>&page=<%= prevPage %>" class="material-icons">chevron_left</a>
     </li>
     <% for(let i=startPage; i<=endPage; i++) { %>
     <li class="pager <%= page === i ? 'active' : '' %>">
-      <a href="<%=pagerQuery%>&page=<%= i %>"><%= i %></a>
+      <a href="<%=goPager%>&page=<%= i %>"><%= i %></a>
     </li>
     <% } %>
     <li class="pager pager-next">
-      <a href="<%=pagerQuery%>&page=<%= nextPage %>" class="material-icons">chevron_right</a>
+      <a href="<%=goPager%>&page=<%= nextPage %>" class="material-icons">chevron_right</a>
     </li>
     <li class="pager pager-next-set">
-      <a href="<%=pagerQuery%>&page=<%= nextPager %>" class="material-icons">keyboard_double_arrow_right</a>
+      <a href="<%=goPager%>&page=<%= nextPager %>" class="material-icons">keyboard_double_arrow_right</a>
     </li>
     <li class="pager pager-last">
-      <a href="<%=pagerQuery%>&page=<%= totalPage %>" class="material-icons">last_page</a>
+      <a href="<%=goPager%>&page=<%= totalPage %>" class="material-icons">last_page</a>
     </li>
   </ul>
 </div>
